# OpenID

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile.in  LICENSE  OpenBusAPIClient.cpp  README.md  iOSBuild.sh
.github/workflows/: cmake-ubuntu.yml
CMakeModules/: CLibrarySetup.cmake  CMakeInstall.cmake  CatchSetup.cmake  Examples.cmake  iOS.cmake
docs/: about.rst  c_api.rst  conf.py  cpp.rst  cusage.rst  index.rst  link_license.rst  requirements.txt  usage.rst
examples/: Authenticate.cpp  CInterface.cpp  CMakeLists.txt  DeleteUser.cpp  ExampleSettings.hpp  SignUp.cpp  authenticate.cpp  c_interface.cpp  cognito_signup.cpp  delete_user.cpp  examples_settings.hpp  signup.cpp
include/: OpenAPIClient.h  OpenAPIClient.hpp  OpenBusAPIClient.hpp  OpenID.h  OpenID.hpp
src/: APIClient.cpp  APIClient.hpp  Authentication.hpp  CMakeLists.txt  IdentityProvider.cpp  IdentityProvider.hpp  Interface.cpp  api_client.cpp  api_client.hpp  authentication.cpp  authentication.hpp  config.hpp  error.hpp  identity.cpp  identity.hpp  identity_provider.cpp  identity_provider.hpp  interface.cpp  sign_up.cpp  sign_up.hpp
tests/: CMakeLists.txt  Catch.hpp  TestAPIClient.cpp  TestAuthentication.cpp  TestHeaders.cpp  TestInclude.cpp  authentication_test.cpp  test_api_client.cpp  test_authentication.cpp  test_aws_sdk.cpp  test_headers.cpp  test_include.cpp
tools/: AnalyseResponse.py  apitracker.py
